samples/_failures_safe/1761704230_62ac55_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98981b5b.c: In function ‘tokenize’:
./samples/SAFE/__tmp_98981b5b.c:180:9: error: expected declaration or statement at end of input
  180 |         }
      |         ^
./samples/SAFE/__tmp_98981b5b.c:180:9: error: expected declaration or statement at end of input
